NetBSD Problem Report #49192

From www@NetBSD.org  Thu Sep 11 07:55:34 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 33676CD33A
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 11 Sep 2014 07:55:34 +0000 (UTC)
Message-Id: <20140911075532.BC2B1CD394@mollari.NetBSD.org>
Date: Thu, 11 Sep 2014 07:55:32 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Assigment twice in endcoding.c (file).
X-Send-Pr-Version: www-1.0

>Number:         49192
>Category:       bin
>Synopsis:       Assigment twice in endcoding.c (file).
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    christos
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Sep 11 08:00:00 +0000 2014
>Closed-Date:    Thu Sep 11 18:22:56 +0000 2014
>Last-Modified:  Thu Sep 11 18:22:56 +0000 2014
>Originator:     Henning Petersen
>Release:        
>Organization:
>Environment:
>Description:
Assignment to code twice in endconfig.c at line 105 and 106.

		*code_mime = "utf-8";
 	} else if (file_looks_utf8(buf, nbytes, *ubuf, ulen) > 1) {
 		DPRINTF(("utf8 %" SIZE_T_FORMAT "u\n", *ulen));
		*code = "UTF-8 Unicode (with BOM)";
 		*code = "UTF-8 Unicode";
 		*code_mime = "utf-8";
 	} else if ((ucs_type = looks_ucs16(buf, nbytes, *ubuf, ulen)) != 0) {

>How-To-Repeat:

>Fix:


>Release-Note:

>Audit-Trail:
From: henning petersen <henning.petersen@t-online.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/49192: Assigment twice in endcoding.c (file).
Date: Thu, 11 Sep 2014 14:31:51 +0200

 Am 11.09.2014 um 10:00 schrieb gnats-admin@netbsd.org:
 > Thank you very much for your problem report.
 > It has the internal identification `bin/49192'.
 > The individual assigned to look at your
 > report is: bin-bug-people. 
 > 
 >> Category:       bin
 >> Responsible:    bin-bug-people
 >> Synopsis:       Assigment twice in endcoding.c (file).
 >> Arrival-Date:   Thu Sep 11 08:00:00 +0000 2014
 > 
 > 
 change endconding.c to encoding.c

From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: henning.petersen@t-online.de
Subject: Re: bin/49192: Assigment twice in endcoding.c (file).
Date: Thu, 11 Sep 2014 15:03:00 +0200

 Could you please tell us the full path inside the NetBSD source tree?

 Thanks,

 Martin

Responsible-Changed-From-To: bin-bug-people->christos
Responsible-Changed-By: apb@NetBSD.org
Responsible-Changed-When: Thu, 11 Sep 2014 13:26:42 +0000
Responsible-Changed-Why:
Christos looks after file(1).


From: Alan Barrett <apb@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/49192: Assigment twice in endcoding.c (file).
Date: Thu, 11 Sep 2014 15:25:24 +0200

 On Thu, 11 Sep 2014, Martin Husemann wrote:
 > Could you please tell us the full path inside the NetBSD source tree?

 That's in src/external/bsd/file/dist/src/encoding.c

From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49192 CVS commit: src/external/bsd/file/dist/src
Date: Thu, 11 Sep 2014 09:30:04 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Thu Sep 11 13:30:04 UTC 2014

 Modified Files:
 	src/external/bsd/file/dist/src: encoding.c

 Log Message:
 PR/49192: remove dup assignment.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.5 -r1.2 src/external/bsd/file/dist/src/encoding.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: henning petersen <henning.petersen@t-online.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/49192: Assigment twice in endcoding.c (file).
Date: Thu, 11 Sep 2014 15:14:28 +0200

 Am 11.09.2014 um 15:05 schrieb Martin Husemann:
 > The following reply was made to PR bin/49192; it has been noted by GNATS.
 > 
 > From: Martin Husemann <martin@duskware.de>
 > To: gnats-bugs@NetBSD.org
 > Cc: henning.petersen@t-online.de
 > Subject: Re: bin/49192: Assigment twice in endcoding.c (file).
 > Date: Thu, 11 Sep 2014 15:03:00 +0200
 > 
 >  Could you please tell us the full path inside the NetBSD source tree?
 >  
 >  Thanks,
 >  
 >  Martin
 >  
 > 

 yes it is external/bsd/file/dist/src/encoding.c .

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Thu, 11 Sep 2014 18:22:56 +0000
State-Changed-Why:
fixed, thanks
(might be worth reporting this upstream too if you haven't)


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.