PR/49192: remove dup assignment.